Implement OneToMany relationship between Company and Employee as well as Role Check when Employee joins a company